# logic-translation

./: .gitignore  BooleanCombination.hs  Main.hs  README.md  TL.hs  TODO.md  Translation.hs  logic-translation.cabal  package.yaml  stack.yaml
executable/: Main.hs
src/: FOMLO.hs  Parse.hs  Pretty.hs  Separation.hs  Util.hs
